--- a/.editorconfig
+++ b/.editorconfig
@@ -2,14 +2,19 @@ root = true
 
 # Unix-style newlines with a newline ending every file
 [*]
-
 end_of_line = lf
 insert_final_newline = true
 # 4 space indentation
 
 
 [*.{java,gradle,xml}]
-
 charset = utf-8
 indent_style = space
 indent_size = 4
+
+
+[*.{yaml,yml}]
+indent_style = space
+indent_size = 2
+charset = utf-8
+trim_trailing_whitespace = true
