--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -2,15 +2,23 @@ server:
   port: 8080
 
 spring:
+  application:
+    name: auth
+  profiles:
+    active: dev
+
+---
+
+spring:
+  profiles: dev
 
   datasource:
     url: jdbc:mysql://${db.host:localhost}:${db.port:3306}/${db.name:auth_service}?useSSL=false
     username: ${db.uid:root}
-    password: ${db.pwd:password}
+    password: ${db.pwd:password123}
     driver-class-name: com.mysql.jdbc.Driver
     initialization-mode: never
     platform: mysql
-
   jpa:
     properties:
       hibernate:
@@ -18,6 +26,24 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-      ddl-auto: validate
+      ddl-auto: none
+
+check-user-scopes: false
+
+---
+
+spring:
+  profiles: docker
+  datasource:
+    url: jdbc:h2:~/data/test;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9797;DB_CLOSE_DELAY=- 1;DB_CLOSE_ON_EXIT=FALSE
+    driverClassName: org.h2.Driver
+    username: sa
+    password: test123
+  h2:
+    console:
+      enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: none
 
 check-user-scopes: false
