Added resource server and more features to auth

--- a/auth/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/auth/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -8,6 +8,8 @@ databaseChangeLog:
       file: db/changelog/schema/userSchema.yaml
 
   ###################################################
-  # Data
+  # Sample Data
   - include:
       file: db/changelog/data/oauthData.yaml
+  - include:
+      file: db/changelog/data/userData.yaml
