--- a/client/pom.xml
+++ b/client/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.caesar.resource</groupId>
-    <artifactId>resource</artifactId>
+    <artifactId>client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>resource</name>
-    <description>resource</description>
+    <name>client</name>
+    <description>client</description>
 
     <parent>
         <artifactId>global</artifactId>
